Fixed tools spacing issue

--- a/client/src/global.sass
+++ b/client/src/global.sass
@@ -28,6 +28,15 @@ body
     margin: 60px 0 60px 0
     @extend .container
 
+.three-item-grid
+    // Layout
+    display: flex
+    justify-content: space-around
+    align-items: center
+    flex-wrap: wrap
+    margin: 60px 0 60px 0
+    @extend .container
+
 .card,
     // Layout
     width: 100% // Height will be decided per component
