--- a/client/src/sections/tools/Tools.sass
+++ b/client/src/sections/tools/Tools.sass
@@ -21,7 +21,7 @@
     //* Layout 
     width: 100%
     max-width: 350px
-    height: 375px
+    // height: 375px
     display: grid
     grid-template-columns: repeat(3, auto)
     grid-template-rows: repeat(3, auto)
